# annodate

./: .gitignore  Annodate.hs  LICENSE  README.md  annodate.cabal  default.nix  flake.nix  hie.yaml  shell.nix
.github/workflows/: build.yaml
app/: Main.hs
src/: Annodate.hs
