name:                annodate
version:             0.1.0.0
synopsis:            Annotate program output with date timestamps
license:             MIT
license-file:        LICENSE
author:              Martin Øinæs Myrseth
maintainer:          myrseth@gmail.com
category:            Utility
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Annodate
  ghc-options:         -Wall -Werror
  build-depends:       base
                     , ansi-terminal
                     , old-locale
                     , process
                     , text
                     , time
  default-language:    Haskell2010
  extensions:          LambdaCase
                     , OverloadedStrings

executable ad
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror
  build-depends:       base >= 4.7 && < 5
                     , annodate
                     , optparse-applicative
  default-language:    Haskell2010
